# jace

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE  LICENSE_HEADER.txt  README.md  ROADMAP.md  noxfile.py  pyproject.toml  requirements-dev.txt
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml.disabled  ci.yml
docs/: conf.py  index.md  main_differences.md  pyproject.toml
requirements/: base.in  base.txt  cuda12.in  cuda12.txt  dev-cuda12.in  dev-cuda12.txt  dev.in  dev.txt  sync_tool.py
src/jace/: __about__.py  __init__.py  api.py  optimization.py  stages.py  tracing.py  translated_jaxpr_sdfg.py
src/jace/jax/: __init__.py  api.py  api_helper.py  jace_compiled.py  jace_jitted.py  jace_lowered.py  stages.py  translation_cache.py
src/jace/jax/stages/: __init__.py  a_stage.py  jace_compiled.py  jace_lowered.py  jace_wrapped.py  stage.py  translation_cache.py
src/jace/optimization/: __init__.py
src/jace/translator/: __init__.py  _translation_context.py  jace_subtranslator_interface.py  jace_translation_memento.py  jaxpr_translator_builder.py  jaxpr_translator_driver.py  managing.py  mapped_operation_base_translator.py  post_translation.py  pre_post_translation.py  primitive_translator.py  translated_jaxpr_sdfg.py
src/jace/translator/primitive_translators/: __init__.py  alu_translator.py  alu_translators.py  arithmetic_logical_translators.py  broadcast_in_dim_translator.py  concatenate.py  concatenate_translator.py  conditions.py  convert_element_type_translator.py  copy_translator.py  gather_translator.py  iota_translator.py  mapped_operation_base_translator.py  pjit_translator.py  reshape_translator.py  select_n_translator.py  slicing.py  squeeze_translator.py
src/jace/translator/sub_translators/: __init__.py  a_primitive_translator.py  alu_translator.py
src/jace/translator/util/: __init__.py  debug.py  jace_translation_memento.py  revision_counter.py  subtranslator_helper_order.py  util.py
src/jace/util/: __init__.py  compiling.py  dace.py  dace_helper.py  debug.py  definitions.py  jax.py  jax_helper.py  re_pattern.py  revision_counter.py  traits.py  translation_cache.py  util.py
tests/: __init__.py  common_fixture.py  conftest.py  test_caching.py  test_convert_element_type.py  test_decorator.py  test_empty_jaxpr.py  test_jax_api.py  test_jaxpr_translator_builder.py  test_jaxpr_translator_driver.py  test_misc.py  test_package.py  test_sub_translators_alu.py  test_sub_translators_broadcast_in_dim.py  test_sub_translators_convert_element_type.py  test_sub_translators_iota.py  test_sub_translators_reshape.py  test_sub_translators_select_n.py  test_sub_translators_slicing.py  test_sub_translators_squeeze_expand_dims.py  test_subtranslator_helper.py  test_subtranslator_helper_order.py  util.py
tests/general_tests/: __init__.py  test_caching.py  test_jax_api.py
tests/integration_tests/: __init__.py  test_empty_jaxpr.py  test_jaxpr_translator_builder.py  test_jaxpr_translator_driver.py  test_primitive_translator_managing.py
tests/integration_tests/primitive_translators/: __init__.py  conftest.py  test_primitive_alu.py  test_primitive_arithmetic_logical_operations.py  test_primitive_broadcast_in_dim.py  test_primitive_concatenate.py  test_primitive_cond.py  test_primitive_convert_element_type.py  test_primitive_copy.py  test_primitive_gather.py  test_primitive_iota.py  test_primitive_pjit.py  test_primitive_reshape.py  test_primitive_select_n.py  test_primitive_slicing.py  test_primitive_squeeze_expand_dims.py
tests/translator_tests/: __init__.py  test_empty_jaxpr.py  test_jaxpr_translator_driver.py  test_subtranslator_helper.py
tests/translator_tests/primitive_translators/: test_sub_translators_alu.py  test_sub_translators_convert_element_type.py  test_sub_translators_iota.py  test_sub_translators_reshape.py  test_sub_translators_slicing.py
tests/unit_tests/: __init__.py  test_caching.py  test_decorator.py  test_jax_api.py  test_misc.py  test_package.py
