[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[project]
authors = [
  {name = "ETH Zurich", email = "gridtools@cscs.ch"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = [
  "dace>=0.15",
  "jax[cpu]>=0.4.24",
  "numpy>=1.26.0"
]
description = "JAX jit using DaCe (Data Centric Parallel Programming)"
name = "JaCe"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
license.file = "LICENSE"

[project.optional-dependencies]
cuda12 = [
  "cupy-cuda12x>=12.1.0",
  "jax[cuda12]>=0.4.24",
  "optuna>=3.4.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/GridTools/JaCe/issues"
Changelog = "https://github.com/GridTools/JaCe/releases"
Discussions = "https://github.com/GridTools/JaCe/discussions"
Homepage = "https://github.com/GridTools/JaCe"

[tool.coverage]

[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  'def __repr__',
  # Don't complain about typechecker includes
  'if TYPE_CHECKING:',
  '\.\.\.',
  '@overload',
  # Don't complain if tests don't hit defensive assertion code:
  'raise AssertionError',
  'raise NotImplementedError',
  # Don't complain if non-runnable code isn't run:
  'if 0:',
  'if __name__ == .__main__.:',
  # Don't complain about abstract methods and interfaces.
  '@(abc\\.)?abstractmethod',
  '@(abc\\.)?abstract',
  'class .*\bProtocol\):'
]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
source = ["jace"]

# -- mypy  --
[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = ["src", "tests"]
ignore_missing_imports = false
implicit_optional = false
implicit_reexport = false
# install_types = true
namespace_packages = false
# pretty = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_incomplete_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
module = ["tests.*", "dace.*", "jax.*", "jaxlib.*"]

# -- pytest  --
[tool.pytest]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
  "error"
]
log_cli_level = "INFO"
minversion = "6.0"
testpaths = [
  "tests"
]
xfail_strict = true

# -- ruff --
[tool.ruff]
line-length = 100
respect-gitignore = true
show-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "A",  # flake8-builtins
  "B",  # flake8-bugbear
  "I",  # isort
  "G",  # flake8-logging-format
  "C4",  # flake8-comprehensions
  "PT",  # flake8-pytest-style
  "UP",  # pyupgrade       # TODO: in evaluation
  "ARG",  # flake8-unused-arguments
  "ERA",  # eradicate
  "ICN",  # flake8-import-conventions
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return   # TODO: in evaluation
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify # TODO: in evaluation
  "T10",  # flake8-debugger
  "T20",  # flake8-print    # TODO: in evaluation
  "TCH",  # flake8-type-checking  # TODO: in evaluation
  "NPY"  # NumPy specific rules
]
ignore = [
  'B905',  # [zip-without-explicit-strict]
  'E501',  # [line-too-long]
  'UP038'  # [non-pep604-isinstance]
]
# ignore-init-module-imports = true  # deprecated in preview mode
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ['jace']
known-third-party = [
  'cupy',
  'dace',
  'jax',
  'numpy',
  'pytest',
  'typing_extensions'
]
lines-after-imports = 2
order-by-type = true
required-imports = ["from __future__ import annotations"]
section-order = [
  'future',
  'standard-library',
  'third-party',
  'first-party',
  'tests',
  'local-folder'
]

[tool.ruff.lint.isort.sections]
tests = ["tests", "unit_tests", "integration_tests"]

[tool.ruff.lint.per-file-ignores]
"!tests/**.py" = ["PT"]  # Ignore `flake8-pytest-style` everywhere except in `tests/`
"noxfile.py" = ["T20"]  # Ignore `flake8-print`
"tests/**" = ["T10", "T20"]  # Ignore `flake8-debugger` and `flake8-print`
